@@ -5,9 +5,9 @@
 ## Created On	    : Thu Oct 29 15:35:55 1998
 ## Created On Node  : tiamat.datasync.com
 ## Last Modified By : Manoj Srivastava
-## Last Modified On : Mon Jun  7 23:37:11 1999
+## Last Modified On : Tue Jun 29 10:27:46 1999
 ## Last Machine Used: glaurung.green-gryphon.com
-## Update Count	    : 42
+## Update Count	    : 45
 ## Status	    : Unknown, Use with caution!
 ## HISTORY	    :
 ## Description	    :
@@ -23,9 +23,13 @@ ppackage:= packaging-manual
 
 FILES_TO_CLEAN  = debian/files debian/buildinfo  debian/substvars \
 		  version.ent  policy.lout policy.lout.ld lout.li \
-		  upgrading-checklist.text policy.text.gz
-STAMPS_TO_CLEAN = stamp-binary stamp-build stamp-configure
-DIRS_TO_CLEAN   = debian/tmp policy.html fhs
+		  upgrading-checklist.text policy.text.gz \
+		  packaging.lout packaging.text.gz packaging.ps \
+                  packaging.pdf.gz menu-policy.text.gz \
+                  proposal.text.gz menu-policy.pdf.gz proposal.pdf.gz
+STAMPS_TO_CLEAN = stamp-policy stamp-packaging stamp-build stamp-configure
+DIRS_TO_CLEAN   = debian/tmp policy.html fhs debian/tmp-packaging \
+                  packaging.html menu-policy.html proposal.html
 SGML_FILES      = policy packaging menu-policy proposal
 
 # Location of the source dir
@@ -34,13 +38,20 @@ TMPTOP	  := $(SRCTOP)/debian/tmp
 DOCDIR	  := $(TMPTOP)/usr/doc/$(package)
 LIBDIR	  := $(TMPTOP)/usr/share/doc-base
 
-FHS_ARCHIVE    =(shell ls -1 fhs*.tar.gz)
-FHS_FILES      =fhs/fhs.dvi fhs/fhs.ps fhs/fhs.txt
-FSSTND_FILES   =FSSTND-FAQ fsstnd-1.2.dvi.gz fsstnd-1.2.ps.gz fsstnd-1.2.txt.gz
-POLICY_FILES   =policy.text.gz policy.sgml virtual-package-names-list.text \
-		upgrading-checklist.text libc6-migration.text version.ent
-BYHAND_FILES   =policy.text.gz libc6-migration.text\
-		virtual-package-names-list.text
+PTMPTOP	  := $(SRCTOP)/debian/tmp-packaging
+PDOCDIR	  := $(PTMPTOP)/usr/doc/$(package)
+PLIBDIR	  := $(PTMPTOP)/usr/share/doc-base
+
+FHS_ARCHIVE  =$(shell ls -1 fhs*.tar.gz)
+FHS_FILES    =fhs/fhs.dvi fhs/fhs.ps fhs/fhs.txt
+FSSTND_FILES =FSSTND-FAQ fsstnd-1.2.dvi.gz fsstnd-1.2.ps.gz fsstnd-1.2.txt.gz
+POLICY_FILES =policy.text.gz policy.sgml virtual-package-names-list.text \
+	      upgrading-checklist.text libc6-migration.text \
+	      version.ent proposal.sgml proposal.text.gz \
+              menu-policy.sgml menu-policy.text.gz
+BYHAND_FILES =policy.text.gz libc6-migration.text \
+              virtual-package-names-list.text menu-policy.text.gz
+PBYHAND_FILES=packaging.text.gz
 
 install_file   = /usr/bin/install -p	-o root -g root	 -m  644
 install_program= /usr/bin/install -p	-o root -g root	 -m  755
@@ -87,8 +98,8 @@ binary-arch:	build
 # generated by this package.  If there were any they would be
 # made here.
 
-binary-indep:	stamp-binary
-stamp-binary:  build
+binary-indep:	stamp-policy stamp-packaging
+stamp-policy:  build
 	@test root = "`whoami`" || (echo need root priviledges; exit 1)
 	$(checkdir)
 	test -f stamp-build	|| $(MAKE) -f	     debian/rules build
@@ -111,20 +122,60 @@ stamp-binary:  build
 	$(install_file)	    debian/copyright	     $(DOCDIR)/
 	$(install_file)	    debian-policy.desc	     $(LIBDIR)/debian-policy
 	(tar cf -	    policy.html) |	     (cd $(DOCDIR);   tar xf -)
+	(tar cf -	    menu-policy.html) |	     (cd $(DOCDIR);   tar xf -)
+	(tar cf -	    proposal.html) |	     (cd $(DOCDIR);   tar xf -)
 	$(install_program)  debian/{postinst,prerm}  debian/tmp/DEBIAN/
-	dpkg-gencontrol	    -isp
+	dpkg-gencontrol	    -pdebian-policy -Pdebian/tmp -isp
 	chown		    -R root.root debian/tmp
 	chmod		    -R go=rX debian/tmp
 	dpkg		    --build debian/tmp ..
-	debiandoc2ps	    -pa4 -1 -O policy.sgml | gzip -9v >	 ../policy.ps.gz
+	debiandoc2latexps   -O policy.sgml | gzip -9v >	 ../policy.ps.gz
+	debiandoc2latexpdf  -O policy.sgml | gzip -9v >	 ../policy.pdf.gz
 	GZIP=-9v tar zcf    ../policy.html.tar.gz    policy.html
 	dpkg-distaddfile    -fdebian/files	     policy.ps.gz	byhand -
+	dpkg-distaddfile    -fdebian/files	     policy.pdf.gz	byhand -
 	dpkg-distaddfile    -fdebian/files	     policy.html.tar.gz byhand -
 	for i in	    $(BYHAND_FILES); do \
 	  $(install_file)   $$i		   ..		     ; \
 	  dpkg-distaddfile  -fdebian/files $$i	     byhand - ; \
 	done
-	touch		   stamp-binary
+	touch		   stamp-policy
+
+stamp-packaging:  build
+	@test root = "`whoami`" || (echo need root priviledges; exit 1)
+	$(checkdir)
+	test -f stamp-build	|| $(MAKE) -f	     debian/rules build
+	-rm -rf			$(PTMPTOP)
+	$(make_directory)	$(PTMPTOP)/DEBIAN
+	$(make_directory)	$(PDOCDIR)
+	$(make_directory)	$(PLIBDIR)
+	echo "packaging-manual:Version=$(version)"	     > debian/substvars
+
+	$(install_file)	   packaging.sgml	     $(PDOCDIR)/
+	$(install_file)	   version.ent	             $(PDOCDIR)/
+	$(install_file)	   debian/changelog	     $(PDOCDIR)/
+	-gzip -fqr9	   $(DOCDIR)
+	$(install_file)	   packaging.text.gz	     $(PDOCDIR)/
+	$(install_file)	   debian/copyright	     $(PDOCDIR)/
+	$(install_file)	   packaging-manual.desc     $(PLIBDIR)/packaging-manual
+	(tar cf -	   packaging.html) |	     (cd $(PDOCDIR);   tar xf -)
+	$(install_program) debian/{postinst,prerm}   debian/tmp-packaging/DEBIAN/
+	dpkg-gencontrol	   -ppackaging-manual -Pdebian/tmp-packaging -isp
+	chown		   -R root.root debian/tmp-packaging
+	chmod		   -R go=rX debian/tmp-packaging
+	dpkg		   --build debian/tmp-packaging ..
+	debiandoc2latexps  -O packaging.sgml | gzip -9f > ../packaging.ps.gz
+	debiandoc2latexpdf -O packaging.sgml | gzip -9f > ../packaging.pdf.gz
+	GZIP=-9v tar zcf   ../packaging.html.tar.gz    packaging.html
+	dpkg-distaddfile   -fdebian/files	   packaging.ps.gz	 byhand -
+	dpkg-distaddfile   -fdebian/files	   packaging.pdf.gz	 byhand -
+	dpkg-distaddfile   -fdebian/files	   packaging.html.tar.gz byhand -
+	for i in	    $(PBYHAND_FILES); do \
+	  $(install_file)   $$i		   ..		     ; \
+	  dpkg-distaddfile  -fdebian/files $$i	     byhand - ; \
+	done
+	touch		   stamp-
+
 
 define checkdir
 	test -f debian/rules -a -f policy.sgml
